# Projects_Study_Cpp

Algorytmy/Kolokwium2/: Awaria.cpp  Awaria.h  CMakeLists.txt  Komputery.cpp  Komputery.h  awarie.csv  fileHandling.cpp  fileHandling.h  komputery.csv  main.cpp
Algorytmy/Kolos2_nauka1/: CMakeLists.txt  Student.h  lab10.h  lab9.h  main.cpp  plik_K.csv  plik_M.csv
Algorytmy/Kolos2_nauka2/: CMakeLists.txt  main.cpp
Algorytmy/ZIO_Lab_LO/: CMakeLists.txt
Algorytmy/gauss/: main.cpp
Algorytmy/kolokwium/: CMakeLists.txt  main.cpp
Algorytmy/lab1_kwadratzanak/: CMakeLists.txt  main.cpp
Algorytmy/lab2_horner_krotnosc_dziala/: CMakeLists.txt  main.cpp
Algorytmy/lab2_horner_normalny_dziala/: main.cpp
Algorytmy/lab3_interpolacja_Lagrangea_dziala/: main.cpp
Algorytmy/lab4_interpolacja_newtona_dziala/: main.cpp
Algorytmy/lab5_interpolacja_hermita_prawie/: main.cpp
Algorytmy/lab5_interpolacja_nevillea_dziala/: main.cpp
Algorytmy/lab6_aproksymacja_najmniejsze_kwadraty_dziala/: main.cpp
Algorytmy/lab7_trapezy_i_simpson_dziala/: main.cpp
Algorytmy/lab8_kawadratury_gaussa_dziala/: main.cpp
Algorytmy/mat/: CMakeLists.txt  main.cpp
Algorytmy/srednia/: CMakeLists.txt  main.cpp  plik1.txt
Algorytmy/tedt/: CMakeLists.txt  main.cpp
Algorytmy/u1/: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  main.cpp
Algorytmy/u2/: Bufor.cpp  Bufor.h  CMakeLists.txt  MaxBufor.cpp  MaxBufor.h  MeanBufor.cpp  MeanBufor.h  main.cpp
BI/Ztree/: main.cpp  (+1 more)
Inne/: poli.cpp  stastyczne.cpp  tablica.cpp  temp.cpp
KUBUS/: CMakeLists.txt  main.cpp
ZPO/Lab10_ZPO/: CMakeLists.txt  main.cpp
ZPO/Lab13/: CMakeLists.txt  dzielenie.cpp  dzielenie.h  functions.cpp  functions.h  liczba_pierwsza.cpp  liczba_pierwsza.h  number.cpp  number.h  pierwiastek.cpp  pierwiastek.h  test1.cpp  test2.cpp  test_dzielenie.cpp  test_liczba_pierwsza.cpp  test_pierwiastek.cpp
ZPO/Lab6_1_ZPO_LO/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
matuesz_zadabe/: main.cpp
(+212 files in other folders)
